SAWS - Update logout redirect and fix broken UI

--- a/src/app/pages/user-management/admin-user/admin-user.component.css
+++ b/src/app/pages/user-management/admin-user/admin-user.component.css
@@ -86,6 +86,7 @@
     overflow: auto;
     /* overflow-y: auto; */
     max-height: 50vh;
+    margin-top: 10px;
   }
 
   td {
